Fixed dropdown links issue (#331)
* fixed dropdown links issue

* removed extra spaces

--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -100,9 +100,6 @@ nav li a:hover {
 
 .menu__link {
   padding: 15px 30px;
-}
-
-.menu__link a {
   text-decoration: none;
   cursor: pointer;
 }
